override quicklinks color to fix a11y contrast error

--- a/sass/_theme_globals.sass
+++ b/sass/_theme_globals.sass
@@ -1,5 +1,13 @@
 /* Global overrides
 
+// quick links
+header.site-header 
+	div.navbar 
+		#search-quicklinks 
+			button.uw-quicklinks
+				color: $uwHuskyGoldLight
+				text-shadow: 0px 0px 4px rgba($black, 0.54)
+
 //typography
 h3,.h3
 	margin-top: 0
